Move SLKernel to VDSuite

--- a/SLKernel/CMakeLists.txt
+++ b/SLKernel/CMakeLists.txt
@@ -1,44 +1,52 @@
-cmake_minimum_required(VERSION 2.8)
-
-if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-  if(DEFINED ENV{VITASDK})
-    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
-  else()
-    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
-  endif()
-endif()
-
+cmake_minimum_required(VERSION 3.12)
+set(CMAKE_TOOLCHAIN_FILE "$ENV{SCE_PSP2_SDK_DIR}/host_tools/build/cmake/psp2-snc-toolchain.cmake")
 project(SLKernel)
-include("${VITASDK}/share/vita.cmake" REQUIRED)
-include_directories(
-    $ENV{VITASDK}/arm-vita-eabi/include/   
+include(VitaDevelopmentSuite)
+
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 11)
+enable_language(EMD)
+
+add_compile_options(
+    -D_SCE_TARGET_OS_PSP2=1 -Xdiag=0 -Xquit=2
 )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
+add_link_options(
+  --prx-no-runtime-support
+)
 
-add_executable(${PROJECT_NAME}
-  src/main.c
+add_library(${PROJECT_NAME} MODULE
+    src/main.c
+    ${PROJECT_NAME}.emd
 )
-set_target_properties(${PROJECT_NAME}
-  PROPERTIES LINK_FLAGS
-  -nostdlib
-)
+
 target_link_libraries(${PROJECT_NAME}
-  SceModulemgrForDriver_stub
-  SceSysclibForDriver_stub
-  SceAppMgrForDriver_stub
-  SceThreadmgrForDriver_stub
-  SceModulemgrForKernel_stub
-  SceDebugForDriver_stub
-  taihenModuleUtils_stub
-  SceSysmemForDriver_stub 
-  SceSblAIMgrForDriver_stub 
+    SceThreadMgrForDriver_stub
+    SceDebugForDriver_stub
+    SceProcessmgrForKernel_stub
+    SceSysclibForDriver_stub
+    SceSysmemForDriver_stub
+    taihenForKernel_stub
+    SceAppMgrForDriver_stub
 )
-vita_create_self(${PROJECT_NAME}.skprx ${PROJECT_NAME} CONFIG ${PROJECT_NAME}.yml UNSAFE)
-vita_create_stubs(stubs ${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.yml KERNEL)
 
-install(DIRECTORY ${CMAKE_BINARY_DIR}/stubs/
-  DESTINATION lib
-  FILES_MATCHING PATTERN "*.a"
+target_include_directories(${PROJECT_NAME} PRIVATE
+  ${VDSUITE_KERNEL_INCLUDE_DIRECTORIES}
+  ${VDSUITE_STANDARD_INCLUDE_DIRECTORIES}
+  $ENV{SCE_PSP2_SDK_DIR}/target/include
+  $ENV{SCE_PSP2_SDK_DIR}/target/include_common
+  include
+)
+
+target_link_directories(${PROJECT_NAME} PRIVATE
+  ${VDSUITE_LIBRARY_DIRECTORIES}
+)
+
+
+VDSuiteSignElf(${PROJECT_NAME}.skprx ${PROJECT_NAME} KERNEL)
+
+VDSuiteCreateStubs(stubs ${PROJECT_NAME}.emd
+  LIBRARIES
+    SLKernel_stub
+    SLKernel_stub_weak
 )
